Remove create permission endpoint as its automated
